Added first draft of options for newton fractals

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ set (SOURCES
   FractalRenderer.cc
   MandelbrotOptions.cc
   JuliaOptions.cc
+  NewtonOptions.cc
   )
 
 add_library (fractsim_lib SHARED
