Added a status bar which will contain the loading bar and the rendering button

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ set (SOURCES
   MandelbrotOptions.cc
   JuliaOptions.cc
   NewtonOptions.cc
+  RenderingStatus.cc
   )
 
 add_library (fractsim_lib SHARED
