Added 'RenderingOptions' class which allows to define a window to render the fractal

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ set (SOURCES
   JuliaOptions.cc
   NewtonOptions.cc
   RenderingStatus.cc
+  RenderingOptions.cc
   )
 
 add_library (fractsim_lib SHARED
