Started implementation for scheduler which perform the computation of fractals, added implementation for 'compute' in mandelbrot and julia options

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ set (SOURCES
   NewtonOptions.cc
   RenderingStatus.cc
   RenderingOptions.cc
+  RenderingScheduler.cc
   )
 
 add_library (fractsim_lib SHARED
