Added interface to perform rendering of a single tile

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,7 @@ set (SOURCES
   RenderingStatus.cc
   RenderingOptions.cc
   RenderingScheduler.cc
+  RenderingTile.cc
   )
 
 add_library (fractsim_lib SHARED
