Added base implementation for fractal proxy

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,7 @@ set (SOURCES
   RenderingOptions.cc
   RenderingScheduler.cc
   RenderingTile.cc
+  Fractal.cc
   )
 
 add_library (fractsim_lib SHARED
