Added 'ColorPalett' class to handle the creation of a palette for 'Newton' fractals

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,7 @@ set (SOURCES
   Fractal.cc
   StatusBar.cc
   NewtonRenderingOptions.cc
+  ColorPalette.cc
   )
 
 add_library (fractsim_lib SHARED
