fix: fix: Updated to latest revision of core_utils

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,35 +1,27 @@
-project (fractsim_lib)
 
-set (CMAKE_CXX_STANDARD 14)
+add_library (fractsim_lib SHARED "")
 
-#set (CMAKE_VERBOSE_MAKEFILE ON)
 set (CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-set (SOURCES
-  FractalRenderer.cc
-  MandelbrotOptions.cc
-  JuliaOptions.cc
-  NewtonOptions.cc
-  RenderingStatus.cc
-  RenderingOptions.cc
-  RenderingTile.cc
-  Fractal.cc
-  StatusBar.cc
-  NewtonRenderingOptions.cc
-  ColorPalette.cc
-  )
-
-add_library (fractsim_lib SHARED
-  ${SOURCES}
-  )
-
-set (FRACTSIM_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
+target_sources (fractsim_lib PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/FractalRenderer.cc
+	${CMAKE_CURRENT_SOURCE_DIR}/MandelbrotOptions.cc
+	${CMAKE_CURRENT_SOURCE_DIR}/JuliaOptions.cc
+	${CMAKE_CURRENT_SOURCE_DIR}/NewtonOptions.cc
+	${CMAKE_CURRENT_SOURCE_DIR}/RenderingStatus.cc
+	${CMAKE_CURRENT_SOURCE_DIR}/RenderingOptions.cc
+	${CMAKE_CURRENT_SOURCE_DIR}/RenderingTile.cc
+	${CMAKE_CURRENT_SOURCE_DIR}/Fractal.cc
+	${CMAKE_CURRENT_SOURCE_DIR}/StatusBar.cc
+	${CMAKE_CURRENT_SOURCE_DIR}/NewtonRenderingOptions.cc
+	${CMAKE_CURRENT_SOURCE_DIR}/ColorPalette.cc
+	)
 
 target_link_libraries(fractsim_lib
-  sdl_core
-  sdl_graphic
-  )
+	sdl_core
+	sdl_graphic
+	)
 
 target_include_directories (fractsim_lib PUBLIC
-  ${CMAKE_CURRENT_SOURCE_DIR}
-  )
+	${CMAKE_CURRENT_SOURCE_DIR}
+	)
